--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "SqlConnection": "Data Source=DESKTOP-6N0TFDT;Database=Week2_Uzay_Hava_Durumu ;User ID=sa;Password=Kurumsal123"
   },
-  "AllowedHosts": "*"
-}
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
