--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=DESKTOP-6N0TFDT;Database=Week2_Uzay_Hava_Durumu ;User ID=sa;Password=Kurumsal123"
+    //"SqlConnection": "Data Source=DESKTOP-6N0TFDT;Database=Week2_Uzay_Hava_Durumu ;User ID=sa;Password=Kurumsal123;Encrypt=True;TrustServerCertificate=False;",
+    "SqlConnection": "Server=DESKTOP-6N0TFDT;Database=Week2_Uzay_Hava_Durumu;User Id=sa;Password=Kurumsal123;Encrypt=False;TrustServerCertificate=False;Trusted_Connection=True;"
   },
     "Logging": {
       "LogLevel": {
