--- a/WebApplication1/week2_huseyingulerman.Api.csproj
+++ b/WebApplication1/week2_huseyingulerman.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.14">
       <PrivateAssets>all</PrivateAssets>
@@ -17,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\week2_huseyingulerman.Repository\week2_huseyingulerman.Repository.csproj" />
+    <ProjectReference Include="..\week2_huseyingulerman.Service\week2_huseyingulerman.Service.csproj" />
   </ItemGroup>
 
 </Project>
